--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@types/react-router-dom": "^5.3.3",
     "axios": "^1.2.2",
     "classnames": "^2.3.2",
     "react": "^18.2.0",
