--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@types/react-router-dom": "^5.3.3",
+    "@types/react-transition-group": "^4.4.5",
     "axios": "^1.2.2",
     "classnames": "^2.3.2",
     "react": "^18.2.0",
@@ -19,6 +20,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
+    "react-transition-group": "^4.4.5",
     "sass": "^1.57.1",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
