ModalProduct renamed to ProductDetail and moved to pages/HomePage. Fix path to @type

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -7,7 +7,7 @@
       "@styles/*": ["src/styles/*"],
       "@assets/*": ["src/assets/*"],
       "@utils/*": ["src/utils/*"],
-      "@types/*": ["src/types/*"],
+      "@type/*": ["src/types/*"],
       "@store/*": ["src/store/*"]
     }
   }
